force-app/main/default/objects/Business_Case__c/Business_Case__c.object-meta.xml
<CustomObject>
    <label>Business Case</label>
    <nameField>
        <label>Business Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>