force-app/main/default/objects/Business_Case__c/fields/Attached__c.field-meta.xml
<CustomField>
    <fullName>Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attached</label>
    <type>Checkbox</type>
</CustomField>