force-app/main/default/objects/Business_Case__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Business Cases</relationshipLabel>
    <relationshipName>Business_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>